src/test/contracts/negative/pattern_matching_anomalies/missing_cases/c.jsligo
type t = ["One", int] | ["Two", nat] | ["Three"]

let s = (x : t) : unit => 
  match(x, {
    Two: (_ : nat) => unit,
  })